# HiveNode

./: .env.sample  .gitignore  Cargo.toml  README.md  WORKER_DESIGN_OVERVIEW.md  WORKER_PROTOCOL_APPENDIX.md  WORKER_TECHNICAL_SPEC.md  grafana_dashboard.json  run.sh  setup.sh  setup_ollama.sh
src/: config.rs  main.rs
src/llm/: mod.rs
src/llm/models/: llama3_8b.rs  mod.rs
src/llm/models/core/: config.rs  mod.rs  token.rs  tokenizer.rs
src/llm/models/utils/: loader.rs
src/llm/traits/: embedding.rs  inferance.rs  llm.rs  loading.rs  mod.rs  model.rs  template.rs  tokenize.rs
src/logging/: error.rs  logger.rs  mod.rs
src/managers/: errors.rs  manager.rs  mod.rs  model_manager.rs  protocol_manager.rs
src/messages/: mod.rs  proxy_message.rs  proxy_request.rs
src/models/: mod.rs  poller.rs  tags.rs
src/protocol/: backend.rs  connection.rs  docker.rs  functions.rs  mod.rs  network_util.rs  os_util.rs  protocol.rs  state.rs
src/ws/: client.rs
src/ws/messages/: message.rs  message_type.rs  mod.rs
src/ws/messages/variants/: mod.rs
src/ws/messages/variants/bidirectional/: error.rs  success.rs
src/ws/messages/variants/incomming/: load_models.rs  submit_embed.rs  submit_prompt.rs
src/ws/messages/variants/outgoing/: authentication.rs  response_embed.rs  response_load_model.rs  response_prompt.rs  response_prompt_token.rs
