[package]
name = "hive_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
colog = "1.3.0"
dotenv = "0.15.0"
log = "0.4.21"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
