[package]
name = "hive_node"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.31", features = ["executor"] }
anyhow = "1.0.82"
chrono = "0.4.38"
colog = "1.3.0"
dotenv = "0.15.0"
log = "0.4.21"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = [
    "blocking",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
systemstat = "0.2.3"
influxdb2 = "0.5.2"
tokio = { version = "1.42.0", features = ["full"] }
sysinfo = "0.33.0"
nvml-wrapper = "0.10.0"
lazy_static = "1.5.0"
uuid = { version = "1.13.1", features = ["v4"] }
